[package]
name = "rocker"
version = "0.1.0"
authors = ["Antoine Busch <abusch@atlassian.com>"]
description = "Text-mode UI for Docker"
keywords = ["tui", "docker"]
publish = false

[[bin]]
bench = false
path = "src/main.rs"
name = "rkr"

[dependencies]
bytesize = "1"
failure = "0.1"
shiplift = { git = "https://github.com/abusch/shiplift", branch = "fixes" }
# shiplift = { path = "/home/abusch/code/rust/shiplift" }
termion = "*"
tui = "0.2"
