[package]
name = "rocker"
version = "0.1.1-alpha.0"
authors = ["Antoine Busch <abusch@atlassian.com>"]
description = "Text-mode UI for Docker"
keywords = ["tui", "docker"]
publish = false

[[bin]]
bench = false
path = "src/main.rs"
name = "rkr"

[dependencies]
byteorder = "1"
bytesize = "1"
crossbeam-channel="0.2"
failure = "0.1"
log = "0.4"
shiplift = { git = "https://github.com/abusch/shiplift", branch = "fixes" }
termion = "*"
# tui = "0.3.0-beta.0"
tui = { path="/home/abusch/code/rust/tui-rs" }
tui-logger = { path = "/home/abusch/code/rust/tui-logger" }
