[package]
name = "rocker"
version = "0.1.1-alpha.0"
authors = ["Antoine Busch <abusch@atlassian.com>"]
description = "Text-mode UI for Docker"
keywords = ["tui", "docker"]
publish = false
edition = "2018"

[[bin]]
bench = false
path = "src/main.rs"
name = "rkr"

[dependencies]
byteorder = "1"
bytesize = "1"
crossbeam-channel="0.3"
failure = "0.1"
log = "0.4"
shiplift = "0.5"
termion = "1.5"
tokio = "1.8"
tui = "0.6"
# tui-logger = "0.3"
tui-logger = { git="https://github.com/abusch/tui-logger", branch="update-tui" }
